// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constant-value-int.melody.twig - melody-verify: constant-value-int.melody.twig 1`] = `
    123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`constant-value-string.melody.twig - melody-verify: constant-value-string.melody.twig 1`] = `
  Test string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;

exports[`special-cases.melody.twig - melody-verify: special-cases.melody.twig 1`] = `
{% if isRTL %}&#8206;{% endif %}

{% if searchResultFailing %}
<li><span><!--//--></span>No results found</li>
{% endif %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[object Promise]
`;
